<resources>
    <string name="app_name">TipApp</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="amazing_20">Amazing (20 %)</string>
    <string name="good_18">Good (18 %)</string>
    <string name="ok_15">OK (15 %)</string>
    <string name="no_tip">No tip</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="amount_of_tip">amount of tip</string>
</resources>
